[gd_scene load_steps=3 format=3 uid="uid://cq7355v8fg4ru"]

[ext_resource type="Script" path="res://addons/noded/story_settings/nodes/noded_character_node.gd" id="1_6gcfa"]
[ext_resource type="Texture2D" uid="uid://tgf80iy5mtie" path="res://addons/noded/icons/fairy-wand_lorc.png" id="2_jkgkd"]

[node name="NodedCharacterNode" type="GraphNode"]
self_modulate = Color(0.494118, 0.839216, 0.87451, 1)
custom_minimum_size = Vector2(256, 0)
offset_left = 65.0
offset_top = 252.0
offset_right = 347.0
offset_bottom = 533.0
mouse_filter = 1
position_offset = Vector2(65, 252)
title = "Character"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_6gcfa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Draegan, Nautalis..."

[node name="NameGenBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Generate a name for this character based on the culture he is from"
icon = ExtResource("2_jkgkd")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Culture"

[node name="ClassifSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
wrap_mode = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/NameGenBtn" to="." method="_on_name_gen_btn_pressed"]
